All Working Correctly TO-DO: - Redesign front-end - Implement more color changes to front end - Support Light and Dark mode, both from back end and on front end - much more...

--- a/static/css/aboutme.css
+++ b/static/css/aboutme.css
@@ -1,8 +1,21 @@
 body {
   background-image: none;
-  background-color: white;
+  background-color: rgb(247, 233, 224);
   margin: 0px;
+  color: rgb(51, 42, 42);
   height: 100svh;
+}
+
+.image-behind-scrollbar::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background: linear-gradient(90deg, transparent calc(99.8% - 15px), rgb(247, 233, 224) calc(100% - 15px));
 }
 
 main {
@@ -16,34 +29,39 @@ main {
 main #top-image {
   display: block;
   position: relative;
+  background: linear-gradient(transparent, black);
   height: calc(100svh - 50px);
   width: 100svw;
 }
-main #top-image img {
+main #top-image #main-image {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-main #top-image::before {
-  content: "";
-  display: block;
+main #top-image button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column nowrap;
   position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(90deg, transparent calc(99.8% - 15px), white calc(100% - 15px));
+  bottom: 50px;
+  right: 50px;
+  width: -moz-min-content;
+  width: min-content;
+  height: -moz-min-content;
+  height: min-content;
+  border: 1px solid goldenrod;
+  border-radius: 10px;
 }
-main #top-image::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) calc(90% - 15px), white calc(100% - 15px));
+main #top-image button img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 90%;
+  height: 90%;
+}
+main #top-image button p {
+  font-size: xx-small;
 }
 main #top-bar {
   display: flex;
@@ -57,7 +75,6 @@ main #top-bar {
   top: 0px;
   width: 100svw;
   height: 50px;
-  background-color: black;
 }
 main #top-bar a {
   padding: 7px 14px;
@@ -66,21 +83,21 @@ main #top-bar a {
   font-weight: 1000;
   text-align: center;
   text-decoration: none;
-  color: #333; /* Text color */
-  background-color: #fff; /* Button background color */
-  border: 2px solid #ccc; /* Border color */
-  border-radius: 8px; /* Rounded corners */
+  color: rgb(247, 233, 224);
+  background-color: rgb(51, 42, 42);
+  border: 2px solid goldenrod;
+  border-radius: 8px;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
 main #top-bar a:hover {
-  background-color: #f02727;
-  color: #555;
-  border-color: #888;
+  color: rgb(51, 42, 42);
+  background-color: rgb(247, 233, 224);
+  border-color: firebrick;
 }
 main #top-bar a.active {
-  background-color: #f02727;
-  color: #555;
-  border-color: #888;
+  color: rgb(51, 42, 42);
+  background-color: rgb(247, 233, 224);
+  border-color: goldenrod;
 }
 
 ::-webkit-scrollbar {
@@ -91,9 +108,9 @@ main #top-bar a.active {
 ::-webkit-scrollbar-thumb {
   background-color: rgba(74, 62, 62, 0.4);
   border-radius: 10px;
-  border: 4px solid white;
+  border: 4px solid rgb(247, 233, 224);
 }
 
 ::-webkit-scrollbar-track {
-  background-color: white;
+  background-color: rgb(247, 233, 224);
 }
