--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -86,7 +86,7 @@ main {
 
             border: 1px solid $accent-light-color;
             border-radius: 10px;
-            background-color: $primary-light-color;
+            
 
             
             img {
